[gd_scene load_steps=9 format=3 uid="uid://u0jhoe6k7wto"]

[ext_resource type="Script" path="res://prefabs/Dialogue/DialogueBox/DialogueBox.gd" id="1_tg0p8"]
[ext_resource type="Texture2D" uid="uid://bdlm2k5inqmwb" path="res://assets/UI/compass.png" id="2_34t7n"]
[ext_resource type="Theme" uid="uid://bnb6osg7rfj47" path="res://theme/smallround.tres" id="3_vi1rk"]
[ext_resource type="Theme" uid="uid://dksvrshxgc4ql" path="res://theme/Signpost.tres" id="4_tw6qj"]
[ext_resource type="Theme" uid="uid://c044efnplgfdt" path="res://theme/Scroll.tres" id="5_00pjh"]
[ext_resource type="SpriteFrames" uid="uid://cjoid6ojefedy" path="res://theme/Arrows.tres" id="6_k3o7l"]

[sub_resource type="Animation" id="Animation_q44kr"]
resource_name = "textbox_fade"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xuf1v"]
_data = {
"textbox_fade": SubResource("Animation_q44kr")
}

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_tg0p8")
metadata/Navi_Enabled = true
metadata/YesNo_Enabled = true

[node name="DialogueWrapper" type="MarginContainer" parent="."]
offset_top = 364.0
offset_right = 960.0
offset_bottom = 540.0
size_flags_vertical = 8
theme_override_constants/margin_left = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="YesNo" type="MarginContainer" parent="DialogueWrapper"]
visible = false
layout_mode = 2
size_flags_horizontal = 8

[node name="Sprite2D" type="Sprite2D" parent="DialogueWrapper/YesNo"]
position = Vector2(-57, -14)
texture = ExtResource("2_34t7n")

[node name="DialogueSelect" type="Control" parent="DialogueWrapper/YesNo"]
layout_mode = 2

[node name="DialogueYes" type="Button" parent="DialogueWrapper/YesNo/DialogueSelect"]
layout_mode = 0
offset_left = -73.0
offset_top = -67.0
offset_right = -41.0
offset_bottom = -42.0
size_flags_horizontal = 7
theme = ExtResource("3_vi1rk")
theme_type_variation = &"Button_Alt"
text = "Yes"

[node name="DialogueNo" type="Button" parent="DialogueWrapper/YesNo/DialogueSelect"]
layout_mode = 0
offset_left = -114.0
offset_top = -27.0
offset_right = -87.0
offset_bottom = -2.0
size_flags_horizontal = 7
theme = ExtResource("3_vi1rk")
theme_type_variation = &"Button_Alt"
text = "No"

[node name="DialogueText" type="RichTextLabel" parent="DialogueWrapper"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme = ExtResource("4_tw6qj")
bbcode_enabled = true
text = "Lorem [b]ipsum[/b] dolor sit amet, consectetur adipiscing elit. Nullam vestibulum, lacus et auctor facilisis, nibh lorem fermentum lorem, a cursus diam magna in nisi. Donec luctus ullamcorper congue. "
fit_content = true

[node name="NameContainer" type="MarginContainer" parent="DialogueWrapper"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = -20
theme_override_constants/margin_top = -44

[node name="Name" type="Label" parent="DialogueWrapper/NameContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_00pjh")
text = "Name Here"

[node name="ClickToContinue" type="AnimatedSprite2D" parent="DialogueWrapper"]
position = Vector2(821, 100)
scale = Vector2(2, 2)
sprite_frames = ExtResource("6_k3o7l")
animation = &"Flash_R"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xuf1v")
}

[node name="Sounds" type="Node" parent="."]

[node name="CustomSound" type="AudioStreamPlayer" parent="Sounds"]

[connection signal="button_up" from="DialogueWrapper/YesNo/DialogueSelect/DialogueYes" to="." method="_on_YesButton_button_up"]
[connection signal="button_up" from="DialogueWrapper/YesNo/DialogueSelect/DialogueNo" to="." method="_on_dialogue_finished"]
